[package]
name = "base_url"
description = "A Url type which strictly cuts out errors related to parsing and host suitability after creation at the cost of some flexibility"
authors = ["Brady McDonough <brady.mcd.codes@gmail.com>"]
repository = "https://github.com/bradymcd/rs-baseurl"
license = "MIT"
version = "1.0.0"

[dependencies]
url = "^1.0.0"
try_from = "0.2.2"
