[package]
name = "base_url"
description = "A wrapper around the Url type for web urls"
readme = "README.md"
authors = ["Brady McDonough <brady.mcd.codes@gmail.com>"]
repository = "https://github.com/bradymcd/rs-baseurl"
license = "MIT"
version = "1.0.2"
keywords = ["url", "parser"]
categories = ["web-programming", "encoding"]

[dependencies]
url = "^1.0.0"
