[package]
name = "base_url"
description = "A wrapper around the Url type for web urls"
readme = "README.md"
authors = ["Brady McDonough <brady.mcd.codes@gmail.com>"]
repository = "https://github.com/bradymcd/rs-baseurl"
license = "MIT"
version = "1.1.0"
keywords = ["url", "parser"]
categories = ["web-programming", "encoding"]
edition = "2018"

[dependencies]
url = "^1.7.2"
